# SpaceShooter

./: .gitignore  CMakeLists.txt  README.md  note.txt  todo.txt
assets/: .editorconfig  main_menu.form
assets/shaders/: debug.frag.glsl  debug.vert.glsl
code/: Engine.cpp  Game.cpp  GameStateManager.cpp  main.cpp
code/Asteroid/: PolygonsGenerator.cpp
code/Entities/: Entity.cpp
code/GameStates/: GameState.cpp  MainMenu.cpp  PlayState.cpp
code/UserInterface/: ScoreDisplay.cpp  Starfield.cpp
code/UserInterface/Widgets/: Button.cpp
code/Utility/: Box2dDebugDraw.cpp  ColorConverter.cpp  Keyboard.cpp  Random.cpp  SettingsManager.cpp
code/World/: ContactListener.cpp  CoordinateSpaceMapper.cpp  Entity.cpp  EntityFactory.cpp  PhysicsBodyFactory.cpp  Systems.cpp  UnitScaling.cpp  World.cpp
code/World/Builders/: AsteroidBuilder.cpp  BulletBuilder.cpp
code/World/Components/: AsteroidGraphics.cpp  RigidBodyComponent.cpp  ShipGraphics.cpp  ShipInput.cpp  ShipPhysics.cpp
code/World/Scripts/: ShipScript.cpp
header/: Game.hpp  GameStateManager.hpp
header/Asteroid/: PolygonsGenerator.hpp
header/Entities/: Entity.hpp
header/Entities/Components/Interfaces/: GraphicsComponent.hpp
header/GameStates/: GameState.hpp  MainMenu.hpp  PlayState.hpp  SettingsState.hpp
header/UserInterface/: ScoreDisplay.hpp  Starfield.hpp
header/UserInterface/Widgets/: Button.hpp
header/Utility/: Box2dDebugDraw.hpp  ColorConverter.hpp  Keyboard.hpp  Random.hpp  SettingsManager.hpp  delaunator.cpp
header/World/: ContactListener.hpp  CoordinateSpaceMapper.hpp  Entity.hpp  EntityEvent.hpp  EntityFactory.hpp  EntityType.hpp  PhysicsBodyFactory.hpp  ScriptableEntity.hpp  Systems.hpp  UnitScaling.hpp  World.hpp
header/World/Builders/: AsteroidBuilder.hpp  BulletBuilder.hpp
header/World/Components/: AsteroidComponent.hpp  AsteroidGraphics.hpp  BulletComponent.hpp  Components.hpp  DefaultPhysics.hpp  GameStateComponent.hpp  IdentifierComponent.hpp  MeshComponent.hpp  NativeScriptComponent.hpp  NullInput.hpp  OwningMeshComponent.hpp  RigidBodyComponent.hpp  ShipGraphics.hpp  ShipInput.hpp  ShipPhysics.hpp  TransformComponent.hpp
header/World/Components/Interfaces/: GraphicsComponent.hpp  InputComponent.hpp  PhysicsComponent.hpp
header/World/Scripts/: ShipScript.hpp
src/: Engine.cpp  Engine.hpp
src/Client/: main.cpp
src/Core/: Engine.cpp  Engine.hpp  EntryPoint.hpp  GameState.cpp  GameState.hpp  GameStateManager.cpp  GameStateManager.hpp  Random.cpp  Random.hpp  Screen.cpp  SettingsManager.cpp
src/Egienx/Core/: Engine.cpp  Engine.hpp  EntryPoint.hpp  GameState.cpp  GameState.hpp  Keyboard.cpp  Keyboard.hpp  Screen.hpp  Time.cpp  Time.hpp
src/Egienx/Patch/: Thor.hpp
src/Egienx/Scene/: Entity.cpp  Entity.hpp  Scene.cpp  Scene.hpp  ScriptableEntity.hpp  Systems.cpp  Systems.hpp  UnitScaling.cpp
src/Egienx/Scene/Components/: Components.hpp  RigidBodyComponent.cpp
src/Egienx/Scene/Scripts/: ShipScript.cpp  ShipScript.hpp
src/Egienx/Utility/: Box2dDebugDraw.cpp  Box2dDebugDraw.hpp  VectorConverter.cpp  VectorConverter.hpp  delaunator.cpp
src/Egnitor/: main.cpp
src/Egnitor/GameStates/: PlayState.cpp  PlayState.hpp
src/Egnitor/Panels/: SceneInspectorPanel.cpp  SceneInspectorPanel.hpp
src/GameStates/: PlayState.cpp  PlayState.hpp
src/Scene/: Scene.cpp  ScriptableEntity.hpp  Systems.cpp
src/Scene/Components/: Components.hpp
src/Scene/Scripts/: ShipScript.cpp
src/Utility/: ColorConverter.cpp  Random.cpp  delaunator.hpp
src/World/: Systems.cpp  Systems.hpp  World.cpp
src/World/Components/: RigidBodyComponent.cpp
src/World/Scripts/: ShipScript.cpp  ShipScript.hpp
